syntax="proto3";
option go_package = "./gen/zkp_pb";
package zkp_pb;

message RegisterRequest {
    string user = 1;

    message Commits {
        bytes y1 = 1;
        bytes y2 = 2;
    }
    repeated Commits commits = 2;
}

message AuthRequest {
    string user = 1;

    message Commits {
        bytes r1 = 1;
        bytes r2 = 2;
    }
    repeated Commits commits = 2;
}

message ChallengeResponse {
    bytes Challenge = 1;
}

message AnswerRequest {
    bytes Answer = 1;
}
